unpackaged/main/default/objects/Subsidiary__c/Subsidiary__c.object-meta.xml
<CustomObject>
    <description>This is a custom object to contain the information on Subsidiary and Country</description>
    <label>Subsidiary</label>
    <nameField>
        <label>Subsidiary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subsidiaries</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>