unpackaged/main/default/objects/Subsidiary__c/fields/Agreement_Clause__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Clause__c</fullName>
    <label>Agreement Clause</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>