unpackaged/main/default/objects/Subsidiary__c/fields/Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Address__c</fullName>
    <inlineHelpText>Add &lt;Br\&gt; for line break</inlineHelpText>
    <label>Company Address</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>