unpackaged/main/default/objects/Subsidiary__c/fields/Events_Claus__c.field-meta.xml
<CustomField>
    <fullName>Events_Claus__c</fullName>
    <label>Events Claus</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>