unpackaged/main/default/objects/Subsidiary__c/fields/Include_B2B_country_manager__c.field-meta.xml
<CustomField>
    <fullName>Include_B2B_country_manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether country manager name is required on a contract</description>
    <inlineHelpText>Denotes whether country manager name is required on a contract</inlineHelpText>
    <label>Include B2B country manager</label>
    <type>Checkbox</type>
</CustomField>