unpackaged/main/default/objects/Subsidiary__c/fields/NS_Subsidiary_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Subsidiary_Internal_ID__c</fullName>
    <description>NetSuite record internal ID</description>
    <externalId>true</externalId>
    <label>NS Subsidiary Internal ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>