unpackaged/main/default/objects/Subsidiary__c/fields/Payment_Clause__c.field-meta.xml
<CustomField>
    <fullName>Payment_Clause__c</fullName>
    <label>Payment Clause</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>