unpackaged/main/default/objects/Subsidiary__c/fields/Subsidiary_Code__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Code__c</fullName>
    <description>An internal custom code for checking with User subsidiary and using this code to determine approval route</description>
    <label>Subsidiary Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>