unpackaged/main/default/objects/Subsidiary__c/fields/Subsubsidiary_Of__c.field-meta.xml
<CustomField>
    <fullName>Subsubsidiary_Of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subsubsidiary Of</label>
    <referenceTo>Subsidiary__c</referenceTo>
    <relationshipLabel>Subsidiaries</relationshipLabel>
    <relationshipName>Subsidiaries</relationshipName>
    <type>Lookup</type>
</CustomField>