unpackaged/main/default/objects/Subsidiary__c/fields/Tax_Label__c.field-meta.xml
<CustomField>
    <fullName>Tax_Label__c</fullName>
    <description>This label is used in the Print Contract PDF to display tax</description>
    <inlineHelpText>GST | VAT</inlineHelpText>
    <label>Tax Label</label>
    <length>20</length>
    <type>Text</type>
</CustomField>