unpackaged/main/default/objects/Subsidiary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Subsubsidiary_Of__c</columns>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Subsidiary_Code__c</columns>
    <columns>Tax_Label__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>NS_Subsidiary_Internal_ID__c</columns>
    <columns>Record_ID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Agreement_Clause__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>